about text does not overflow box background. still need to make fit correctly.

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ h1,
 h2 {
   font-weight: 300;
   line-height: 1.2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 h3 {
@@ -46,6 +50,34 @@ footer {
 
 p {
   margin: 10px 0;
+  /* font-size: 2.5vh;
+  display: block;
+  width: 100%; */
+}
+
+.flex-container {
+  display: flex;
+  margin: 5%;
+  font-size: 1rem;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 5px;
+  flex-basis: content;
+}
+
+.flex-container > #present {
+  height: 100%;
+  flex-basis: max-content;
+}
+
+.flex-container > #past {
+  height: 100%;
+  flex-basis: max-content;
+}
+.flex-container > #future {
+  height: 100%;
+  flex-basis: max-content;
 }
 
 .content h1 {
@@ -90,6 +122,10 @@ p {
   align-items: stretch;
 }
 
+/* #about > article p {
+  column-fill: auto;
+} */
+
 /* #about > fa-certificate,
 h3 {
   text-align: center;
@@ -110,8 +146,8 @@ h3 {
 
 #past {
   height: 75vh;
-  align-self: flex-end;
-  justify-content: flex-start;
+  align-self: flex-start;
+  justify-content: space-around;
 }
 
 #present {
